--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -6,6 +6,7 @@
     <LogoCentral></LogoCentral>
     <h1>Hello, world!</h1>
     <ContetntVisite></ContetntVisite>
+    <GameRunner></GameRunner>
 </body>
 
 
