--- a/Pages/GameRunner.razor.css
+++ b/Pages/GameRunner.razor.css
@@ -1,5 +1,5 @@
 ﻿.charterBack {
-    background-color: white;
+    background-color: #1a1a1a;
     margin-left: 30%;
     margin-right: 30%;
     padding: 10%;
