--- a/Pages/GameRunner.razor
+++ b/Pages/GameRunner.razor
@@ -1,5 +1,5 @@
 ﻿@using MyDevelopmentHouse.DTO
-<p class="Pad">@WhyStart</p>
+<h3 class="Pad">@WhyStart</h3>
 <div class="charterBack" tabindex="0" @onkeydown="HandleKeyDownAsync">
     <img class="charter" src="Logo/Logo.jpg" alt="Logo" style="@customStyle" />
     @foreach (var image in Images)
