--- a/Pages/GameRunner.razor.css
+++ b/Pages/GameRunner.razor.css
@@ -5,8 +5,8 @@
     padding: 10%;
     margin-bottom: 2%;
     position: absolute;
-    position: relative; /* важно! делает контейнер опорной точкой */
-    overflow: hidden; /* чтобы "выпадающее" изображение не выходило за рамки */
+    position: relative;
+    overflow: hidden;
 }
 
 .charter {
