--- a/Pages/ContetntVisite.razor
+++ b/Pages/ContetntVisite.razor
@@ -1,10 +1,21 @@
 ﻿<div class="textVisite">
     <h3>Добрый день!</h3>
-    <p>Меня зовут Даниил, я разработчик на C#.</p>
+    <p>Меня зовут Даниил, я разработчик на C#. Основной фокус — серверная логика, API и работа с данными.</p>
+
     <h3>Мои ключевые компетенции:</h3>
     <ul>
-        <li>Создание REST API приложений</li>
-        <li>Разработка настольных приложений с удобным интерфейсом</li>
-        <li>Реализация 3D симуляций с использованием Unity и Godot</li>
+        <li>Разработка и сопровождение REST API на ASP.NET Core</li>
+        <li>Настольные приложения с интерфейсом на WPF</li>
+        <li>3D-проекты и симуляции на Unity и Godot</li>
     </ul>
+
+    <h3>Стек</h3>
+    <ul>
+        <li>C#, .NET 8, Entity Framework, ASP.NET Core, REST API, WPF</li>
+        <li>Linux (Ubuntu), Git, PostgreSQL</li>
+        <li>Unity, Godot, Blender</li>
+    </ul>
+
+    <h3>Интересы</h3>
+    <p>Предпочитаю работать с архитектурой и бэкендом. Слежу за чистотой кода, читаю техлитературу, использую современные практики разработки</p>
 </div>
