--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -7,6 +7,7 @@
     <h1>Hello, world!</h1>
     <ContetntVisite></ContetntVisite>
     <GameRunner></GameRunner>
+    <MusicLoop></MusicLoop>
 </body>
 
 
