--- a/Pages/MusicLoop.razor
+++ b/Pages/MusicLoop.razor
@@ -1,8 +1,11 @@
-﻿<audio id="bgMusic" autoplay loop>
-    <source src="/Music/Interstellar Whispers.mp3" type="audio/mpeg">
+﻿<audio  id="bgMusic" autoplay loop>
+    <source src="/Music/Mystic Realms.mp3" type="audio/mpeg">
 </audio>
 
-<button @onclick="PlayMusic">@txtPlay</button>
+<div class="paddingMusic">
+    <button  @onclick="PlayMusic">@txtPlay</button>
+</div>
+
 
 @code {
     [Inject] private IJSRuntime JS { get; set; }
