--- a/Pages/MusicLoop.razor
+++ b/Pages/MusicLoop.razor
@@ -1,5 +1,5 @@
 ﻿<audio  id="bgMusic" autoplay loop>
-    <source src="/Music/mystic-music.mp3" type="audio/mpeg">
+    <source src="Music/mystic-music.mp3" type="audio/mpeg">
 </audio>
 
 <div class="paddingMusic">
